# vins_fusion_ros2

./: README.md
camera_models/: CMakeLists.txt  package.xml
camera_models/camera_calib_example/: camera_camera_calib.yaml
camera_models/src/calib/: CameraCalibration.cc
config/: vins_rviz_config.rviz
config/euroc/: euroc_mono_imu_config.yaml
loop_fusion/: CMakeLists.txt  package.xml
loop_fusion/src/: keyframe.cpp  keyframe.h  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
loop_fusion/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  utility.cpp  utility.h
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/src/: rosNodeTest.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  initial_bias_factor.h  initial_pose_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  projectionOneFrameTwoCamFactor.cpp  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.cpp  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.cpp  projectionTwoFrameTwoCamFactor.h  projection_factor.cpp  projection_factor.h
vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
vins_estimator/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  tic_toc.h  utility.h  visualization.cpp  visualization.h
